--- a/create-react-express/client/public/index.html
+++ b/create-react-express/client/public/index.html
@@ -6,8 +6,12 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css"/>
-    <title>React Reading List</title>
+
+    <!-- material UI Roboto font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
+
+
+    <title>Google Books Search and Save API</title>
   </head>
   <body>
     <noscript>
