--- a/create-react-express/client/public/index.html
+++ b/create-react-express/client/public/index.html
@@ -9,6 +9,8 @@
 
     <!-- material UI Roboto font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
+<!-- Material UI font icons -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
 
     <title>Google Books Search and Save API</title>
